--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -3,13 +3,14 @@
 	
 	</div>
 	<div id="copyright">
-	    Please contact <a href="mailto:openchain-conformance@lists.linuxfoundation.org?Subject=OpenChain%20Certification%20Feedback" target="_top">OpenChain Support</a>
-	    to report any inaccuracies or issues.
-	    <p>Copyright &copy; 2016 The Linux Foundation&reg;. All rights reserved. 
+	    <span class="translate" data-i18n="Please contact">Please contact </span>&nbsp;<a href="mailto:openchain-conformance@lists.linuxfoundation.org?Subject=OpenChain%20Certification%20Feedback" target="_top" class="translate" data-i18n="OpenChain Support">OpenChain Support</a>
+	    <span class="translate" data-i18n="report">to report any inaccuracies or issues.</span>
+	    <p> <span class="translate" data-i18n="footer_content">Copyright &copy; 2016 The Linux Foundation&reg;. All rights reserved. 
 	    The Linux Foundation has registered trademarks and uses trademarks. 
-	    For a list of trademarks of The Linux Foundation, please see our 
-	    <a href="https://www.linuxfoundation.org/trademark-usage">Trademark Usage</a> page.  
-	    Linux is a registered trademark of Linus Torvalds.  <a href="https://www.openchainproject.org/privacy">Privacy Policy</a> and
-	     <a href="https://www.openchainproject.org/terms">Terms of Use</a> </p>    
+	    For a list of trademarks of The Linux Foundation, please see our </span>
+	    <a href="https://www.linuxfoundation.org/trademark-usage" class="translate" data-i18n="Trademark Usage">Trademark Usage</a> <span class="translate" data-i18n="page">page. </span> 
+	    <span class="translate" data-i18n="linux">Linux is a registered trademark of Linus Torvalds. </span> <a href="https://www.openchainproject.org/privacy" class="translate" data-i18n="Privacy Policy">Privacy Policy</a> 
+	    <span class="translate" data-i18n="and">and</span>
+	     <a href="https://www.openchainproject.org/terms" class="translate" data-i18n="Terms of Use">Terms of Use</a> </p>    
 	</div>
 </div>
