--- a/WebContent/pwreset.html
+++ b/WebContent/pwreset.html
@@ -31,7 +31,7 @@ Author(s): ViSolve 03/01/2019
     
     	<div class="container">
 		    <div id="TitleArea">
-		        <h1 class="sub-heading">Password Reset</h1>
+		        <h1 class="sub-heading transalte" data-i18n="Password Reset">Password Reset</h1>
 		    </div>
 		    <!-- 002 starts here  -->
 		    <div class="form-group">
@@ -40,20 +40,20 @@ Author(s): ViSolve 03/01/2019
 				  		<p class="validateTips"></p>
 					    <div class="row">
 					      <input type="text" class="form-control custom-input" name="reset-username" id="reset-acc-username" required>
-					      <label class= "custom-label" for="reset-username">Username</label>
+					      <label class= "custom-label translate" data-i18n="Username" for="reset-username">Username</label>
 					    </div>
 					    <div class="row">
 					      <input type="password" class="form-control custom-input" name="reset-pass" id="reset-pass" required>
-					      <label class= "custom-label" for="reset-pass">Password</label>
+					      <label class= "custom-label translate" data-i18n="Password" for="reset-pass">Password</label>
 					    </div>
 					    <div class="row">
 					      <input type="password" class="form-control custom-input" name="reset-pass-verify" id="reset-pass-verify" required>
-					      <label class= "custom-label" for="reset-pass-verify">Re-Enter Password</label>
+					      <label class= "custom-label translate" data-i18n="Re-Enter Password" for="reset-pass-verify">Re-Enter Password</label>
 					    </div>
 					     <div class="row">
 						     <div class="ui-dialog-buttonset">
-						     	<button type="submit" class="btn btn-login btn-md" id="reset-user-password">Reset Password</button>
-						     	<button type="button" class="btn btn-cancel btn-md" id="index-home"  >Cancel</button>
+						     	<button type="submit" class="btn btn-login btn-md translate" data-i18n="Reset Password" id="reset-user-password">Reset Password</button>
+						     	<button type="button" class="btn btn-cancel btn-md translate" data-i18n="Cancel" id="index-home"  >Cancel</button>
 						     </div>
 					     </div>
 				   </form>
