--- a/WebContent/pwresetinvalid.html
+++ b/WebContent/pwresetinvalid.html
@@ -21,10 +21,10 @@
     <div id="topnav"></div>
     <div class="container">
 	    <div id="TitleArea">
-	        <h1>Password Reset Invalid</h1>
+	        <h1 class="translate" data-i18n="Password-reset-title">Password Reset Invalid</h1>
 	    </div>
 	    <div>
-	        <p>The password reset link is either invalid or expired.  You can try resetting the password again or contact the OpenChain team for assistance.</p>
+	        <p class="translate" data-i18n="Password-reset-invalid-content">The password reset link is either invalid or expired.  You can try resetting the password again or contact the OpenChain team for assistance.</p>
 	    </div>
 	    <div id="errors"></div>
 	    <div id="status"></div>
