--- a/WebContent/pwresetrequest.html
+++ b/WebContent/pwresetrequest.html
@@ -22,9 +22,9 @@
     <div id="topnav"></div>
     <div class="container">
 	    <div id="TitleArea">
-	        <h1>Password Reset Request</h1>
+	        <h1 class="translate" data-i18n="Password-reset-request-title">Password Reset Request</h1>
 	    </div>
-	    <div>
+	    <div class="translate" data-i18n="Password-reset-request-content">
 		    An email with a link to reset your password has been sent.  If you do not
 		    see the email, please check your junk email folder.  The link will expire in
 		    24 hours.
