--- a/WebContent/regcomplete.html
+++ b/WebContent/regcomplete.html
@@ -21,9 +21,9 @@
     <div id="topnav"></div>
     <div class="container">
 	    <div id="TitleArea">
-	        <h1>Registration Successful</h1>
+	        <h1 class="translate" data-i18n="Reg-success-title">Registration Successful</h1>
 	    </div>
-	    <div>
+	    <div class="translate" data-i18n="Reg-success-content">
 	        You are now successfully registered.  Please login using the menu above to continue to the self certification.
 	    </div>
 	    <div id="errors"></div>
