--- a/WebContent/regfailed.html
+++ b/WebContent/regfailed.html
@@ -20,10 +20,10 @@
   <body>
     <div class="navbar" id="topnav"></div>
     <div class="container">
-	    <div id="TitleArea">
-	        <h1>Registration Failed</h1>
+	    <div id="TitleArea" >
+	        <h1 class="translate" data-i18n="Reg-failed-title">Registration Failed</h1>
 	    </div>
-	    <div>
+	    <div class="translate" data-i18n= "Reg-failed-content">
 	        Something seems to have gone wrong in the registration.  The registration may have expired.
 	        Please contact the OpenChain team for additional help.
 	    </div>
