--- a/WebContent/signupsuccess.html
+++ b/WebContent/signupsuccess.html
@@ -21,13 +21,13 @@
     <div class="navbar" id="topnav"></div>
     <div class="container">
 	    <div id="TitleArea">
-	        <h1>OpenChain Self Certification Signup</h1>
+	        <h1 class="translate" data-i18n="signup-success-title">OpenChain Self Certification Signup</h1>
 	    </div>
-	    <h2 class="sub-heading">
+	    <h2 class="sub-heading translate" data-i18n="Verification Email" >
 	        Verification Email
 	    </h2>
-	    You should receive an email from no-reply@conformance.openchainproject.org sent to the email specified in the sign-up form.  Click on the link provided to complete the registration process.
-	    If you do not receive an email, check your spam folder and add no-reply@conformance.openchainproject.org to your trusted email list.
+	    <p class="translate" data-i18n="signup-success-content">You should receive an email from no-reply@conformance.openchainproject.org sent to the email specified in the sign-up form.  Click on the link provided to complete the registration process.
+	    If you do not receive an email, check your spam folder and add no-reply@conformance.openchainproject.org to your trusted email list.</p>
 	    <div id="errors"></div>
 	    <div id="status"></div>
 	    <div id="resendveify"></div>
