--- a/WebContent/regfailed.html
+++ b/WebContent/regfailed.html
@@ -18,7 +18,7 @@
     <script src="resources/bootstrap.min.js"></script>
   </head>
   <body>
-    <div class="navbar" id="topnav"></div>
+    <div id="topnav"></div>
     <div class="container">
 	    <div id="TitleArea" >
 	        <h1 class="translate" data-i18n="Reg-failed-title">Registration Failed</h1>
