--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -1,11 +1,12 @@
+
 <script src="resources/i18next.min.js" ></script>
 <script src="resources/jquery-i18next.min.js" ></script>
 <script src="resources/i18nextXHRBackend.js"></script>
 <script src="resources/lib/url/url.min.js"></script>  
 <script src="resources/global.js"></script>    
-<nav class="navbar navbar-expand-lg navbar-dark nav-bg-dark navbar-fixed-top">
+ <nav class="navbar navbar-expand-lg navbar-dark nav-bg-dark navbar-fixed-top">
 	<div class="container container_padding ">
-	  <a class="navbar-brand openchain-logo" href="index.html"><img src ="images/logo_openchain.png"></a>
+	  <a class="navbar-brand openchain-logo append" href="index.html"><img src ="images/logo_openchain.png"></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -14,7 +15,7 @@
 	    <span class="navbar-text">
 	    	<ul class="navbar-nav mr-auto" >
 	    		  		
-		    	<li class="nav-item active"><a class="nav-link " href="certified.html"  onclick="toggle(event);"  > <i class="fa fa-list" aria-hidden="true"></i> <span class="translate" data-i18n="Conforming Submission">Conforming Submission </span><span class="sr-only">(current)</span></a></li>
+		    	<li class="nav-item active"><a class="nav-link append" href="certified.html" > <i class="fa fa-list" aria-hidden="true"></i> <span class="translate" data-i18n="Conforming Submission">Conforming Submission </span><span class="sr-only">(current)</span></a></li>
 		    	<div id="surveylink"></div>
 				<div id="adminlink"></div>
 			    <li><div><ul id="user-dropdown_menu"></ul></div></li>
@@ -33,7 +34,42 @@
 	    </span>
 	  </div>
 	</div>
-</nav>
+</nav> 
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav> -->
 
 <!-- Modal Update Profile -->
 <div class="modal fade" id="updateprofileModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
