PDF Link Added and UI issues are fixed

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -42,7 +42,7 @@ Description:Responsive Navigation bar using Bootstrap. Included Language Chooser
 	    <div id="GettingStarted" >
 	    <h2 class="sub-heading translate" data-i18n="Getting Started">Getting Started</h2>
 	    <p class="translate" data-i18n="Getting Started_content">Applicants confirm their understanding of the OpenChain Specification and the need to complete Self-Certification to become OpenChain Conformant. The Online Self-Certification requires you to:</p>
-	    <ul class="mr-100">
+	    <ul>
 	    <li> <span class="translate" data-i18n="Getting Started_content_1">Fulfill all requirements set forth in the </span> <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-current.pdf" class="translate" data-i18n="Getting Started_content_1_sub">Specification.</a></li>
 	    <li class="translate" data-i18n="Getting Started_content_2">Create an account by selecting sign-up in the user menu.
 	    <li class="translate" data-i18n="Getting Started_content_3">Name a contact person to handle inquiries.</li>
@@ -51,6 +51,8 @@ Description:Responsive Navigation bar using Bootstrap. Included Language Chooser
 	    <li class="translate" data-i18n="Getting Started_content_6">Archive a Reference Copy of all Verification Artifacts as a record in support of the Online Self-Certification.</li>
 	    </ul>
 	    </div>
+	    <p class="mr-100"> <span class="translate" data-i18n="offline-conformance-pdf">Do you prefer to work with a printed checklist? You can download the offline conformance handbook</span> 
+	    <a href="resources/questionnaire/questionnaire-en.pdf" download class="translate" data-i18n="here">here</a>.</p>
 	    <div id="errors"></div>
 	    <div id="status"></div>
 	    <div id="resendveify"></div>
