JS Internationalization with UI Bug Fixes

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -51,8 +51,10 @@ Description:Responsive Navigation bar using Bootstrap. Included Language Chooser
 	    <li class="translate" data-i18n="Getting Started_content_6">Archive a Reference Copy of all Verification Artifacts as a record in support of the Online Self-Certification.</li>
 	    </ul>
 	    </div>
+
 	    <p class="mr-100"> <span class="translate" data-i18n="offline-conformance-pdf">Do you prefer to work with a printed checklist? You can download the offline conformance handbook</span> 
-	    <a href="resources/questionnaire/questionnaire-en.pdf" download class="translate" data-i18n="here">here</a>.</p>
+	    <a id="dwnquestionnaire" download class="translate" data-i18n="here">here</a>.</p>
+
 	    <div id="errors"></div>
 	    <div id="status"></div>
 	    <div id="resendveify"></div>
