--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -48,7 +48,7 @@ Author(s): ViSolve 03/01/2019
 		  <div class="btn-group mr-2" role="group" aria-label="Second group"><button id="btSaveAndSubmit" type="button" class="btn btn-success"><i class="fa fa-paper-plane" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Save and Submit">Save and Submit</span></button></div>
 		  <div class="btn-group mr-2" role="group" aria-label="Third group"><button id="btUnSubmit" type="button" class="btn btn-danger"><i class="fa fa-ban" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Unsubmit">Unsubmit</span></button></div>
 		  <div class="btn-group mr-2" role="group" aria-label="First group"><button id="btDownloadAnswers" type="button" class="btn btn-login"><i class="fa fa-download" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Download Answers">Download Answers</span></button></div>
-		  <div class="btn-group mr-2" role="group" aria-label="Second group"><button id="btResetAnswers" type="button" class="btn btn-cancel"><i class="fa fa-refresh" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Reset">Reset survey</span></button></div>
+		  <div class="btn-group mr-2" role="group" aria-label="Second group"><button id="btResetAnswers" type="button" class="btn btn-cancel"><i class="fa fa-refresh" aria-hidden="true"></i>&nbsp;<span class="translate" data-i18n="Reset">Reset Questionnaire</span></button></div>
 		  
 		  
 		</div>
@@ -63,7 +63,7 @@ Author(s): ViSolve 03/01/2019
 	        <fieldset>
 	            <table>
 	                <tr>
-	                    <td style="text-align: right; padding: 5px"><label for="versionSelect" class="translate" data-i18n="version" >Version</label></td>
+	                    <td style="text-align: right; padding: 5px"><label for="versionSelect" class="translate" data-i18n="Version" >Version</label></td>
 	                    <td style="text-align: left; padding: 5px"><select id="versionSelect"></select></td>
 	                </tr>
 	            </table>
@@ -78,7 +78,7 @@ Author(s): ViSolve 03/01/2019
         <fieldset>
             <table style="width: 100%">
                 <tr>
-                    <td style="text-align: right; padding: 5px"><label for="resetVersionSelect" class="translate" data-i18n="version"  >Version</label></td>
+                    <td style="text-align: right; padding: 5px"><label for="resetVersionSelect" class="translate" data-i18n="Version"  >Version</label></td>
                     <td style="text-align: left; padding: 5px"><select id="resetVersionSelect"></select></td>
                 </tr>
             </table>
