--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -77,19 +77,19 @@ Description: A new Responsive Template to receive the user inputs during Signup.
 				    </div>
 				    <div class="row">
 					    <div class="form-check">
-						    <input type="checkbox" name="approval-use-name-email" id="approval-use-name-email" class="form-check-input" >
-						    <label class="form-check-label custom-lable checkbox-label translate" data-i18n="Sign Up_content_1"  for="approval-use-name-email">My name and email may be shared on conformance page of the OpenChain website</label>
+						    <input type="checkbox" name="approval-use-name-email" id="approval-use-name-email" class="form-check-input update-check-box" >
+						    <label class="form-check-label update-label checkbox-label translate" data-i18n="Sign Up_content_1"  for="approval-use-name-email">My name and email may be shared on conformance page of the OpenChain website</label>
 						</div>
 				    </div>
-				    <div class="row">
+				    <div class="row mr-top-20">
 				    
-					    <div class="form-check mr-40">
-						    <input type="checkbox" name="read-terms" id="read-terms" class="form-check-input" >
-						    <label class="form-check-label custom-lable checkbox-label"  for="read-terms"><span class="translate" data-i18n="Sign Up_content_2">I agree to the Linux Foundation </span>&nbsp;<a href="https://www.openchainproject.org/terms"><span class="Sign Up_content_2_T&C">  Terms of Use</span></a>&nbsp;<span class="translate" data-i18n="and"> and </span>&nbsp;<a href="https://www.openchainproject.org/privacy"><span class="translate" data-i18n="Privacy Policy" > Privacy Policy</span></a></label>
+					    <div class="form-check">
+						    <input type="checkbox" name="read-terms" id="read-terms" class="form-check-input update-check-box" >
+						    <label class="form-check-label update-label checkbox-label"  for="read-terms"><span class="translate" data-i18n="Sign Up_content_2">I agree to the Linux Foundation </span>&nbsp;<a href="https://www.openchainproject.org/terms"><span class="Sign Up_content_2_T&C">  Terms of Use</span></a>&nbsp;<span class="translate" data-i18n="and"> and </span>&nbsp;<a href="https://www.openchainproject.org/privacy"><span class="translate" data-i18n="Privacy Policy" > Privacy Policy</span></a></label>
 						</div>
 				    </div>
-				     <div class="row">
-					     <div class="ui-dialog-buttonset">
+				     <div class="row ">
+					     <div class="ui-dialog-buttonset mr-100">
 					     	<button type="submit" class="btn btn-login btn-md translate" data-i18n="Sign Up" id="signup-button">Sign Up</button>
 					     	<button type="button" class="btn btn-cancel btn-md translate" data-i18n="Cancel" id="index-home">Cancel</button>
 					     </div>
