--- a/WebContent/topnav.html
+++ b/WebContent/topnav.html
@@ -80,15 +80,19 @@
 			</div>
 			<div class="row ">
 			    <div class="form-check">
-					<input type="checkbox" name="update-use-name-email" id="update-use-name-email" class="form-check-input" >
-				    <label class="form-check-label custom-lable checkbox-label translate" data-i18n="Sign Up_content_1" for="update-use-name-email">My name and email may be shared on conformance page of the OpenChain website</label>
+					<input type="checkbox"  name="update-use-name-email" id="update-use-name-email" class="form-check-input update-check-box" >
+				    <label class="form-check-label  checkbox-label update-label translate" data-i18n="Sign Up_content_1" for="update-use-name-email">My name and email may be shared on conformance page of the OpenChain website</label>
 				</div>
 			</div>
 		 </form>
       </div>
       <div class="modal-footer mr-30">
-        <button type="button" class="btn btn-cancel translate" data-i18n="Cancel" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-login translate" data-i18n="Save Changes" id="update-user-profile">Save changes</button>
+      	<div class="btn-group mr-2" role="group" aria-label="First group">
+	        <button type="button" class="btn btn-cancel translate" data-i18n="Cancel" data-dismiss="modal">Cancel</button>
+	    </div>
+	    <div class="btn-group mr-2" role="group" aria-label="second group">
+	        <button type="button" class="btn btn-login translate" data-i18n="Save Changes" id="update-user-profile">Save changes</button>
+	    </div>
       </div>
     </div>
   </div>
@@ -120,6 +124,7 @@
 		 </form>
       </div>
       <div class="modal-footer mr-30">
+      
         <button type="submit" class="btn btn-login translate" data-i18n="Reset Password"  id="btnresetpassword">Reset Password</button>
         <button type="button" class="btn btn-cancel translate" data-i18n="Cancel" data-dismiss="modal">Cancel</button>
       </div>
